Add solution for coin bias estimation problem

--- a/Group Assignments/LaTex/main.bib
+++ b/Group Assignments/LaTex/main.bib
@@ -5,3 +5,31 @@
     yea ={2023},
     publisher={DD2440 Advanced Algorithms KTH}
 }
+@article{article,
+author = {Tan, W.F. and Lee, Lai Soon and Abdul Majid, Zanariah and Seow, Hsin-Vonn},
+year = {2012},
+month = {01},
+pages = {846-852},
+title = {Ant Colony Optimization for Capacitated Vehicle Routing Problem},
+volume = {8},
+journal = {Journal of Computer Science}
+}
+
+@incollection{eichenauer1986non,
+  title={Linear congruential generators},
+  author={Tezuka, Shu},
+  booktitle={Uniform Random Numbers: Theory and Practice},
+  pages={57--82},
+  year={1995},
+  publisher={Springer}
+}
+
+@article{kumbharana2013solving,
+  title={Solving travelling salesman problem using firefly algorithm},
+  author={Kumbharana, Sharad N and Pandey, Gopal M},
+  journal={International Journal for Research in science \& advanced Technologies},
+  volume={2},
+  number={2},
+  pages={53--57},
+  year={2013}
+}
