--- a/Individual Assignments/LaTex/main.bib
+++ b/Individual Assignments/LaTex/main.bib
@@ -13,3 +13,11 @@
     note      = "University of British Columbia",
     url       = "https://www.cs.ubc.ca/~nickhar/W15/Lecture3Notes.pdf"
 }
+
+@misc{Lecture6,
+    author={loana Bercea},
+    title={Lecture 6: Sampling and Probability Amplification},
+    month={October},
+    year={2023},
+    publisher={DD2440 Advanced Algorithms KTH}
+}
