--- a/Group Assignments/LaTex/main.bib
+++ b/Group Assignments/LaTex/main.bib
@@ -1,10 +1,32 @@
+@article{kruskalShortestSpanningSubtree1956,
+  title = {On the Shortest Spanning Subtree of a Graph and the Traveling Salesman Problem},
+  author = {Kruskal, Joseph B.},
+  date = {1956},
+  journaltitle = {Proceedings of the American Mathematical Society},
+  shortjournal = {Proc. Amer. Math. Soc.},
+  volume = {7},
+  number = {1},
+  pages = {48--50},
+  issn = {0002-9939, 1088-6826},
+  doi = {10.1090/S0002-9939-1956-0078686-7},
+  langid = {english},
+}
+
 @misc{Lecture3,
     author={Per Austrin},
     title={Lecture 3: Greedy Approximation Algorithms},
     month={September},
-    yea ={2023},
+    year ={2023},
     publisher={DD2440 Advanced Algorithms KTH}
 }
+
+@misc{lecture_notes,
+    author={Johan Håstad},
+    title={Notes for the course advanced algorithms},
+    year={2000},
+    month={01}
+}
+
 @article{article,
 author = {Tan, W.F. and Lee, Lai Soon and Abdul Majid, Zanariah and Seow, Hsin-Vonn},
 year = {2012},
@@ -32,4 +54,28 @@ journal = {Journal of Computer Science}
   number={2},
   pages={53--57},
   year={2013}
+}
+
+@article{lin_effective_1973,
+	title = {An {Effective} {Heuristic} {Algorithm} for the {Traveling}-{Salesman} {Problem}},
+	volume = {21},
+	url = {http://www.jstor.org/stable/169020},
+	language = {en},
+	number = {2},
+	journal = {Operations Research},
+	author = {Lin, S. and Kernighan, B. W.},
+	year = {1973},
+	pages = {498--516},
+	file = {Lin and Kernighan - 1973 - An Effective Heuristic Algorithm for the Traveling.pdf:/Users/nivadam/Zotero/storage/YFYFMAG2/Lin and Kernighan - 1973 - An Effective Heuristic Algorithm for the Traveling.pdf:application/pdf;tsp.pdf:/Users/nivadam/Zotero/storage/DH3TUEAW/tsp.pdf:application/pdf},
+}
+
+@article{balas1981restricted,
+  title={A restricted Lagrangean approach to the traveling salesman problem},
+  author={Balas, Egon and Christofides, Nicos},
+  journal={Mathematical Programming},
+  volume={21},
+  number={1},
+  pages={19--46},
+  year={1981},
+  publisher={Springer}
 }
