--- a/Individual Assignments/LaTex/main.bib
+++ b/Individual Assignments/LaTex/main.bib
@@ -21,3 +21,11 @@
     year={2023},
     publisher={DD2440 Advanced Algorithms KTH}
 }
+
+@misc{Lecture12,
+    author={loana Bercea},
+    title={Lecture 12: Estimating frequencies},
+    month={Novemeber},
+    year={2023},
+    publisher={DD2440 Advanced Algorithms KTH}
+}
